--- a/src/components/analyze/aq-analyze-backtest-comparison-item.html
+++ b/src/components/analyze/aq-analyze-backtest-comparison-item.html
@@ -10,12 +10,12 @@
 <link rel='import' href='../common/aq-check-authentication.html'>
 <link rel='import' href='../common/aq-loading-progress.html'>
 
-<link rel='import' href='../common/aq-cumret-linechart.html'>
-<link rel='import' href='../common/aq-aggregatedreturns-barchart.html'>
+<link rel='import' href='../common/backtest/aq-cumret-linechart.html'>
+<link rel='import' href='../common/backtest/aq-aggregatedreturns-barchart.html'>
 
 <link rel="import" href="../common/aq-code-comparison-element.html">
-<link rel="import" href="../common/aq-backtest-summary-element.html">
-<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+<link rel="import" href="../common/backtest/aq-backtest-summary-element.html">
+<!--link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"-->
 
 <dom-module id='aq-analyze-backtest-comparison-item'>
     <style include="iron-flex iron-flex-alignment iron-positioning">
