--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -30,7 +30,7 @@
       };
       --paper-toolbar-background: white;--#f2fbf7;--#24293d;
       border-bottom: 1px solid teal;
-      height:8vh;
+      height: 55px; --8vh;
       color:teal;
     }
 
