--- a/src/components/common/aq-label-content-item.html
+++ b/src/components/common/aq-label-content-item.html
@@ -1,4 +1,4 @@
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+<!--link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet"-->
 <dom-module id="label-content-item">
     <template>
         <style>
