--- a/src/components/common/aq-tag-element.html
+++ b/src/components/common/aq-tag-element.html
@@ -9,17 +9,19 @@
                 margin:0;
             }
             .tag-content{
-                font-size: 12px;
-                color:var(--tag-content-color,#8a8c97);
+                font-size: 14px;
+                color: #cc6666;
                 font-family: 'Lato' , sans-serif;
                 font-weight: 400;
             }
-            .tag-container{
+            .tag-container {
                 padding: 0 5px;
-                background-color: var(--tag-element-background-color,#f2f2f2);
+                background-color: white;
+                color: #cc6666;
                 border-radius: 2px;
                 margin-right: 15px;
-                padding-bottom:3px;
+                border: 1px solid lightgray;
+                --padding-bottom:3px;
             }
         </style>
         <div class="tag-container layout horizontal self-center">
