--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -6,7 +6,7 @@
 <link rel='import' href='../../../bower_components/iron-signals/iron-signals.html'>
 
 <link rel='import' href='../../icons/aq-iconset.html'>
-<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<!--link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"-->
 
 <dom-module id='aq-editor-toolbar'>
     <style include="iron-flex iron-flex-alignment iron-positioning"></style>
