--- a/src/components/help/aq-help-marked-item.html
+++ b/src/components/help/aq-help-marked-item.html
@@ -22,50 +22,51 @@
 		}
 
 		code span {
-			font-size:14px !important;
+			font-size:15px !important;
 		}
 
 		p {
-			font-size: 14px;
-            color:#24293d;
+			font-size: 15px;
+            color:#555555;
 		}
 
 		strong {
-			font-weight: bold;
-			font-size: 14px;
+			--font-weight: bold;
+			font-size: 15px;
 		}
 
 		em strong {
-			font-size:14px;
+			font-size:15px;
 			text-decoration: underline;
-			font-weight: bold;
+			--font-weight: bold;
 		}
 		.markdown-html:first-child h2 {
 			color:teal;
-            font-size: 16px;
+            font-size: 17px;
 		}
 		.markdown-html ul{
 			--list-style: none;
-		    font-size: 14px;
+		    font-size: 15px;
 		}
 
 		.markdown-html h4 {
 			color: teal !important;
-            font-size: 14px;
+            font-size: 15px;
 		}
 
 		.markdown-html h3 {
 			color: #cc6666 !important;
-            font-size: 14px;
+            font-size: 15px;
 		}
 
         .markdown-html .aq-help-marked-item{
             color: #24293d;
+            font-size: 15px;
         }
 
         .markdown-html ul h4 {
 			color: #cc6666 !important;
-            font-size: 14px;
+            font-size: 15px;
 		}
 
         h1, h2 {
