--- a/src/components/aq-html-editor.html
+++ b/src/components/aq-html-editor.html
@@ -9,6 +9,8 @@
             box-shadow: var(--aq-html-editor-box-shadow,0 0px 0px rgba(0,0,0,0.2));
             border-radius: 4px;
             border:var(--aq-html-editor-border,1px solid #e7e7e7);
+            font-family: 'Lato', sans-serif;
+            font-size: 15px;
         }
     </style>
     <template>
