--- a/src/components/common/aq-tags-input-container.html
+++ b/src/components/common/aq-tags-input-container.html
@@ -54,7 +54,7 @@
                 font-size: 16px;
             }
         </style>
-        <div class="tagsInputContainer layout horizontal start-justified">
+        <div class="tagsInputContainer layout horizontal center-justified">
             <content></content>
         </div>
     </template>
