--- a/src/components/common/backtest/aq-backtest-detail-summary-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-summary-item.html
@@ -1,22 +1,22 @@
-<link rel='import' href='../../../bower_components/paper-tabs/paper-tabs.html'>
-<link rel='import' href='../../../bower_components/paper-tabs/paper-tab.html'>
-<link rel='import' href='../../../bower_components/paper-card/paper-card.html'>
-<link rel='import' href='../../../bower_components/iron-signals/iron-signals.html'>
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel='import' href='../../../bower_components/iron-pages/iron-pages.html'>
-<link rel='import' href='../../../bower_components/paper-progress/paper-progress.html'>
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+<link rel='import' href='../../../../bower_components/paper-tabs/paper-tabs.html'>
+<link rel='import' href='../../../../bower_components/paper-tabs/paper-tab.html'>
+<link rel='import' href='../../../../bower_components/paper-card/paper-card.html'>
+<link rel='import' href='../../../../bower_components/iron-signals/iron-signals.html'>
+<link rel='import' href='../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../../../bower_components/iron-pages/iron-pages.html'>
+<link rel='import' href='../../../../bower_components/paper-progress/paper-progress.html'>
+<!--link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"-->
+
+<link rel='import' href='../aq-check-authentication.html'>
 
 <link rel='import' href='./aq-backtest-metric-item.html'>
 <link rel='import' href='./aq-backtest-header-item.html'>
 <link rel='import' href='./aq-backtest-metric-item-list.html'>
-
-<link rel='import' href='./aq-check-authentication.html'>
 <link rel='import' href='./aq-cumret-linechart.html'>
 <link rel='import' href='./aq-aggregatedreturns-barchart.html'>
-<script src="../../../resources/scripts/DateTime.js"></script>
+<script src="../../../../resources/scripts/DateTime.js"></script>
 
-<dom-module id='aq-backtest-detail-item'>
+<dom-module id='aq-backtest-detail-summary-item'>
     <style include="iron-flex iron-flex-alignment iron-positioning">
     </style>
 
@@ -26,12 +26,13 @@
             --height: 70%;
         }
 
-        #cumRetLineChart {
+        #cumRetLineChartDiv {
             --height: 250px;
             width: 100%;
+            margin-top: 10px;
             --margin-bottom: 20px;
-            margin-left: 5px;
-            --highcharts-container: {
+            --margin-left: 5px;
+            ---highcharts-container: {
                 width: 98%;
             };
         }
@@ -43,7 +44,8 @@
             width: 98%;
         }
 
-        #barChart {
+        #barChartDiv {
+            margin-top:10px;
             height: 400px;
             width: 100%;
         }
@@ -87,78 +89,70 @@
     </style>
 
     <template>
-
         <aq-check-authentication id='authItem'></aq-check-authentication>
+        <template is='dom-if' if='{{!loading}}'>
+        	<div class="outer-container" >
+                <div class="lower-container flex">
+                	<template is='dom-if' if='{{metrics}}'>
+                		<aq-backtest-metric-item-list 
+                			forced-semi-wide = "[[forcedSemiWide]]"
+                			metric-items = "{{metrics}}"
+                			active="{{active}}">
+            			</aq-backtest-metric-item-list> 
+                	</template>
+                </div>
 
-        <!--template is='dom-if' if="[[isBacktestIdValid(backtestId)]]"-->
-            <paper-card class="layout vertical flex" elevation="{{elevation}}">
-            	<div class="card-content" >
-                    <div class="middle-container self-center flex">
-                    	<template is='dom-if' if='[[backtestHeader]]'>
-                    		<aq-backtest-header-item 
-                    			forced-semi-wide = "[[forcedSemiWide]]"
-                    			header-items="{{backtestHeader}}">
-                    		</aq-backtest-header-item>
-                		</template>
+                <div class="layout horizontal">
+	                <div class="flex"></div>
+	                <paper-tabs noink selected="{{graphType}}" no-bar>
+	                    <paper-tab>Cumulative Return</paper-tab>
+	                    <template is='dom-if' if='[[!active]]'>
+	                        <paper-tab>Monthly Returns</paper-tab>
+	                    </template>
+	                </paper-tabs>
+	                <div class="flex"></div>
+                </div>
+                
+                <iron-pages on-iron-resize='onResize' selected="{{graphType}}">
+                    <div id='cumRetLineChartDiv'>
+                        <!--div class="chart-label">Cumulative Performance
+                        </div-->
+                        <aq-cumret-linechart></aq-cumret-linechart>
                     </div>
 
-                    <div class="bar"></div>
-
-                    <div class="lower-container flex">
-                    	<template is='dom-if' if='{{metrics}}'>
-                    		<aq-backtest-metric-item-list 
-                    			forced-semi-wide = "[[forcedSemiWide]]"
-                    			metric-items = "{{metrics}}"
-                    			active="{{active}}">
-                			</aq-backtest-metric-item-list> 
-                    	</template>
-                    </div>
-
-                    <div class="layout horizontal">
-    	                <div class="flex"></div>
-    	                <paper-tabs noink selected="{{graphType}}">
-    	                    <paper-tab>Cumulative Return</paper-tab>
-    	                    <template is='dom-if' if='[[!active]]'>
-    	                        <paper-tab>Monthly Returns</paper-tab>
-    	                    </template>
-    	                </paper-tabs>
-    	                <div class="flex"></div>
-                    </div>
-
-                    <iron-pages on-iron-resize='onResize' selected="{{graphType}}">
-                        <div id='cumRetLineChartDiv'>
+                    <template is='dom-if' if='[[!active]]'>
+                        <div id='barChartDiv'>
+                            <!--div class="chart-label">Monthly Returns    
+                            </div-->
+                            <aq-aggregatedreturns-barchart></aq-aggregatedreturns-barchart>
                         </div>
+                    </template>
+                <!--/div-->
 
-                        <template is='dom-if' if='[[!active]]'>
-                            <div id='barChartDiv'>
-                            </div>
-                        </template>
-
-                    </iron-pages>
-              	</div>
-            </paper-card>
-        <!--/template-->
+                </iron-pages>
+          	</div>
+        </template>
       
         <iron-signals on-iron-signal-point-data='onBacktestData'></iron-signals>
 
         <iron-signals on-iron-signal-bulk-data='onBacktestBulkData'></iron-signals>
 
         <iron-ajax
-            url="[[computeGetBacktestUrl(backtestId)]]"
-            method='GET'
-            id='getBacktestsQuery'
-            handle-as="json"
-            on-response="onGetBacktestSuccess"
-            on-error="onGetBacktestError"
-            headers='{{header}}'
-            debounce-duration="300"
-            loading='{{loading}}'>
+                url="[[computeGetBacktestUrl(backtestId)]]"
+                method='GET'
+                id='getBacktestsQuery'
+                handle-as="json"
+                on-response="onGetBacktestSuccess"
+                on-error="onGetBacktestError"
+                headers='{{header}}'
+                debounce-duration="300"
+                loading='{{loading}}'>
         </iron-ajax>
 
     </template>
     <script>
         Polymer({
-            is: 'aq-backtest-detail-item',
+            is: 'aq-backtest-detail-summary-item',
 
             properties: {
                 elevation:{
@@ -177,7 +171,6 @@
                 active: {
                     type: Boolean,
                     value: false,
-                    observer: '_activeChanged',
                 },
 
                 metrics: Object,
@@ -222,7 +215,7 @@
                     type: Boolean,
                     readOnly: true,
                     notify: true,
-                    value: false
+                    value: false,
                 },
 
                 pctCompleted: {
@@ -238,16 +231,9 @@
             },
 
             _backtestIdChanged: function (nId, oId) {
-                if (nId && nId!= "") {
-                    this.reset();
+                if (nId) {
+                    //this.reset();
                     this.requestStaticData();
-                }
-            },
-
-            _activeChanged: function() {
-                if(!this.active && this.backtestId != "") {
-                    this.fire('unsubscribe-data',{backtestId:this.backtestId});
-                    this.reset();
                 }
             },
 
@@ -317,12 +303,11 @@
                         "metricValue": "-",
                         "metricDescription": "Avg. Concentration"
                     },];
-
             },
 
             reset: function () {
 
-                var child = Polymer.dom(this.$.cumRetLineChartDiv).querySelector('aq-cumret-linechart');
+                /*var child = Polymer.dom(this.$.cumRetLineChartDiv).querySelector('aq-cumret-linechart');
                 if (child) {
                     Polymer.dom(this.$.cumRetLineChartDiv).removeChild(child);
                 }
@@ -347,7 +332,7 @@
                             }
 
                         },
-                        200);
+                        200);*/
 
                 this.pctCompleted = 0;
                 this.resetMetrics();
@@ -458,7 +443,6 @@
                 	var backtestHeader = this.deepCopy(this.backtestHeader);
                 	this.backtestHeader = [];
                 	this.backtestHeader = backtestHeader;
-                    this.fire('iron-signal',{name: 'backtest-completed', data:{id: this.backtestId}});
                 }
             },
 
@@ -612,7 +596,6 @@
                     {"metricName": "Alpha", "metricValue": data.alpha.toString() + '%', "metricDescription": "Alpha"},
                     //{"metricName":"Avg. Concentration", "metricValue":"0.43", "metricDescription":"Avg. Concentration"},
                 ];
-
             },
 
             requestStaticData: function () {
@@ -624,11 +607,12 @@
             },
 
             updateGraphProperties: function (trackVarFlag) {
-                if (trackVarFlag) {
+                
+                this.async(function() {if (trackVarFlag) {
                     this.$$('aq-cumret-linechart').updatePropertiesForTrackVars();
                 } else {
                     this.$$('aq-cumret-linechart').updateProperties();
-                }
+                }}, 200);
             },
 
             onGetBacktestSuccess: function (e) {
@@ -653,12 +637,7 @@
                 	}
             	];
                 
-            	if (this.backtest.status == "exception") {
-                        this.fire('iron-signal', {name:'partially-completed-backtest', data:{pctCompleted: -1}});
-    		        return ;
-	            }        
-    	
-	            if (this.backtest.status == "active") {
+                if (this.backtest.status == "active") {
                     this.active = true;
                     this.subscribeData();
                     return;
@@ -675,8 +654,8 @@
 
                 this.updateGraphProperties(this.hasTrackVarData);
 
-                this.async(this.createCumRetLineChart, 200);
-                this.async(this.createTrackVarLineChart, 200);
+                this.async(this.createCumRetLineChart, 300);
+                this.async(this.createTrackVarLineChart, 300);
                 this.async(this.createMonthlyReturnBarChart, 500);
             },
 
