--- a/src/components/common/backtest/aq-backtest-header-item.html
+++ b/src/components/common/backtest/aq-backtest-header-item.html
@@ -1,5 +1,5 @@
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel="import" href="../../../bower_components/iron-media-query/iron-media-query.html">
+<link rel='import' href='../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel="import" href="../../../../bower_components/iron-media-query/iron-media-query.html">
 
 <dom-module id='aq-backtest-header-item'>
 	<style  include="iron-flex iron-flex-alignment iron-positioning">
@@ -7,7 +7,19 @@
 
 	<style>
 		.container {
-			padding-left: 30px;
+			border-bottom: 1px solid #e5e5e5;
+			padding-right: 20px;
+			padding-bottom: 3px;
+			--margin-bottom: 5px;
+		}
+
+		aq-qqq {
+			--margin-top: 2px;
+		}
+
+		#bt-name {
+			font-weight: 700;
+			margin-bottom: 10px;
 		}
 	</style>
 
@@ -19,12 +31,10 @@
       
         <iron-media-query query="(max-width: 560px)" query-matches="{{narrow}}"></iron-media-query>
 
-		<div class="container layout horizontal">
-			<!--div class="flex"></div-->
-	        
+        <div id="bt-name">[[heading]]</div>
+		<div class="container layout horizontal justified wrap">
 	        <template is='dom-repeat' items="{{headerItems}}">
 	        	<aq-qqq label="[[item.label]]" metric="[[item.metric]]" forced-semi-wide=[[forcedSemiWide]]></aq-qqq>
-	        	<div class="flex"></div>	
 	        </template>
     	</div>
 	</template>
@@ -33,6 +43,8 @@
 		Polymer({
 			is:'aq-backtest-header-item',
 			properties :{
+				heading: String,
+
 				headerItems:{
 					type:Array,
 					value:[],
@@ -98,12 +110,14 @@
 	  	.text-label {
 	        font-size: 12px;
 	        font-weight: 300;
+	        text-align: center;
 	    }
 
 	    .text-content {
 	        font-weight: 400;
-	        font-size: 13px;
+	        font-size: 14px;
 	        --margin-left: 5px;
+
 
 	    }
 	</style>
