--- a/src/components/community/aq-announcement-card.html
+++ b/src/components/community/aq-announcement-card.html
@@ -1,4 +1,4 @@
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+<!--link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"-->
 <dom-module id="aq-announcement-card">
     <template>
         <style>
