--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -7,6 +7,8 @@
 <link rel='import' href='../common/aq-check-authentication.html'>
 <link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../common/aq-sub-toolbar.html">
+<link rel="import" href="../common/aq-icon-expandable-search.html">
+
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 
 <dom-module id='aq-editor-home-menu'>
@@ -14,41 +16,47 @@
     </style>
 
     <style>
-        
+        #menu-container {
+            margin-left: 15px;
+            margin-bottom: 0px;
+            height: 40px;
+            background-color: white;
+        }
+
         .checkbox-all {
             --paper-checkbox-checked-color: #cc6666;
-            margin-left: 45px;
+            margin-right: 15px;
         } 
 
-        .iconTooltip {
-            --paper-tooltip: {
-                font-size: 13px;
-                min-width: 40px;
-                text-align: center;
+        paper-button {
+            width:150px;
+            height:22px;
+            text-transform: none;
+            --paper-button:{
+                color: #cc6666;
+                font-size: 14px;
+                border: 1px solid #cc6666;
             };
-            --paper-tooltip-opacity: 1.0;
-            --paper-tooltip-background: teal;
         }
 
-        .iconButton {
-            padding:5px;
-            width:35px;
-            margin-right: 5px;
-            margin-left: 5px;
-            color: #cc6666;
-            --paper-icon-button-disabled: {
-                color: #cacaca !important;
-            };
-            --paper-icon-button-disabled-text:grey;
+        paper-button[disabled] {
+            border: 1px solid #e1e1e1;
+            color: #e1e1e1;
+            background-color: white;
         }
 
-        paper-icon-button {
-            --paper-icon-button:{
-                color:#cc6666;
-            };
+        iron-icon {
+            width: 17px;
+            height: 17px;
+        }
 
-            width:40px;
-            height:40px;
+        aq-icon-expandable-search {
+            --height: 32px;
+            width: 50%;
+        }
+
+        .strategy-header {
+            font-size: 18px;
         }
 
     </style>
@@ -56,27 +64,30 @@
     <template>
         <aq-check-authentication id='authItem'></aq-check-authentication>
         
-        <aq-sub-toolbar>
-            <paper-checkbox noink class="checkbox-all" checked="{{checkAll}}"
+        <!--aq-sub-toolbar-->
+        <div id="menu-container" class="layout horizontal">    
+            <paper-checkbox noink class="checkbox-all self-center" checked="{{checkAll}}"
                             on-change='onCheckAllStrategies'></paper-checkbox>
-            <p class="strategy-header">All Strategies</p>
+            <p class="strategy-header self-center">All Strategies</p>
             
             <div class="flex"></div>
 
-            <div id='menu-icons'>
+            <!--aq-icon-expandable-search class="self-center"></aq-icon-expandable-search-->
+
+            <paper-button id='deleteIcon' noink class="iconButton self-center" on-tap="onDelete" disabled="[[!activeDelete]]"><iron-icon icon="aq-icons:delete"></iron-icon> Delete Selected
+            </paper-button>
+
+            <!--div id='menu-icons'>
                 <paper-icon-button id='newIcon' noink class="iconButton" icon="aq-icons:add" on-tap="createNew">
                 </paper-icon-button>
-
-                <paper-icon-button id='deleteIcon' noink class="iconButton" icon="aq-icons:delete" on-tap="onDelete" disabled="[[!activeDelete]]">
-                </paper-icon-button>
-            </div>
+            </div-->
             
-            <paper-tooltip for='newIcon' offset="2" class='iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>New</paper-tooltip>
+            <!--paper-tooltip for='newIcon' offset="2" class='iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>New</paper-tooltip>
 
-            <paper-tooltip for='deleteIcon' offset="2" class='iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>Delete</paper-tooltip>
+            <paper-tooltip for='deleteIcon' offset="2" class='iconTooltip' position="bottom" animation-delay="0" fit-to-visible-bounds>Delete</paper-tooltip-->
 
-        </aq-sub-toolbar>
-        
+        <!--/aq-sub-toolbar-->
+        </div>
     </template>
 
     <script>
@@ -121,10 +132,6 @@
 
             onDelete: function () {
                 this.fire('deleteClicked');
-            },
-
-            createNew: function () {
-                this.fire('newClicked');
             },
 
             onCompare: function () {
