--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -7,6 +7,7 @@
 
 <link rel='import' href='../common/aq-check-authentication.html'>
 <link rel="import" href="../common/aq-loading-progress.html">
+<link rel="import" href="../common/aq-allpage-layout.html">
 
 <link rel='import' href='./aq-editor-home-elementmenu.html'>
 <link rel='import' href='./aq-editor-home-menu.html'>
@@ -16,8 +17,6 @@
 <link rel='import' href='../../dialog/aq-editor-strategy-input-dialog.html'>
 <link rel='import' href='../../dialog/aq-editor-strategy-compare-dialog.html'>
 <script src="../../../resources/scripts/DateTime.js"></script>
-
-<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 
 <dom-module id="aq-editor-home">
     <style include="iron-flex iron-flex-alignment iron-positioning"></style>
@@ -30,16 +29,12 @@
         }
 
         .header {
-            border: 1px solid #9ecbda;
-            -- #d0d0d0;
+            border: 1px solid #e1e1e1;
             --padding: 0 55px;
             line-height: 56px;
             font-size: 18px;
             font-weight: bold;
             background-color: #e3f6ed;
-            -- #9ecbda;
-            -- #90c3d4;
-            -- #acd2df;
             min-width: 600px;
 
         }
@@ -92,25 +87,14 @@
             display: inline;
         }
 
-        .toolbar {
-            height: 60px;
-        }
-
-        #container {
-            margin: 0 auto;
-            color: #24293d;
-            width: 100%;
-            margin-top: 40px;
-        }
-
         #actions aq-editor-home-elementmenu {
             right: 5%;
         }
 
         #ifsearch {
             display: none;
-            position: relative;
-            width: 95%;
+            --position: relative;
+            --width: 95%;
             margin: 0 auto;
         }
 
@@ -119,10 +103,9 @@
             font-style: italic;
         }
         .strategy-container{
-            width: 95%;
-            margin: 0 auto;
-            position: relative;
-            margin-top: 30px;
+            margin-left: 8%;
+            margin-right: 8%;
+            height: 100%;
         }
 
         .strategy-result{
@@ -136,7 +119,16 @@
             color:#757575;
         }
         hr{
-            border: 1px solid #BDBDBD;
+            border: 1px solid #e1e1e1;
+        }
+
+        paper-button {
+            font-size: 14px;
+            --padding: 0 20px;
+            border-radius: 2px;
+            height: 32px;
+            background-color: #cc6666;
+            color: white;
         }
 
         #searchbox {
@@ -145,10 +137,10 @@
             line-height: 46px;
             border: 0;
             margin: 0;
-            padding-left: 30px;
+            padding-left: 10px;
             border: 1px solid #e5e5e5;
             @apply(--paper-font-body1);
-            width: 80%;
+            width: 30%;
             font-size: 14px;
             /*z-index: 2;*/
             background-color: #fff;
@@ -166,88 +158,93 @@
             right: 15px;
         }
         .search-bar {
-            width: 95%;
+            width: 50%;
             margin: 0 auto;
             display: flex;
             align-items: center;
-            margin-bottom: 20px;
-            margin-top: 20px;
+            margin-bottom: 10px;
+            margin-top: 10px;
             position: relative;
+            
         }
 
-        paper-button {
-            border: none;
-            font-size: 13px;
-            background-color: teal;
-            color: #fff;
-            padding: 0 20px;
-            border-radius: 2px;
-            height: 35px;
+        paper-icon-button {
+            border: 1px solid #e1e1e1;
+            color: #e1e1e1;
         }
+
+        #createButton {
+            color: white;
+            background-color: #cc6666;
+            text-transform: none;
+        }
+
+        aq-icon-expandable-search {
+            --height: 32px;
+            width: 50%;
+        }
+
     </style>
 
     <template>
         <!--iron-media-query query="(max-width: 640px)" query-matches="{{narrowViewport}}"></iron-media-query-->
-      <aq-check-authentication id='authItem'></aq-check-authentication>
-      <app-location route="{{route}}" use-hash-as-path></app-location>
-      <iron-signals on-iron-signal-strategy-added='onStrategyAdded'></iron-signals>
+        <aq-check-authentication id='authItem'></aq-check-authentication>
+        <app-location route="{{route}}" use-hash-as-path></app-location>
+        <iron-signals on-iron-signal-strategy-added='onStrategyAdded'></iron-signals>
 
-      <iron-signals on-iron-signal-backtest-added='onBacktestAdded'></iron-signals>
+        <iron-signals on-iron-signal-backtest-added='onBacktestAdded'></iron-signals>
 
-      <iron-signals on-iron-signal-backtest-deleted='onBacktestDeleted'></iron-signals>
+        <iron-signals on-iron-signal-backtest-deleted='onBacktestDeleted'></iron-signals>
 
-      <iron-signals on-iron-signal-dirtybit='onSetDirtyBit'></iron-signals>
+        <iron-signals on-iron-signal-dirtybit='onSetDirtyBit'></iron-signals>
 
-      <app-route
-              route="{{route}}"
-              pattern="/dashboard/editor"
-              query-params="{{queryParams}}">
-      </app-route>
+        <app-route
+            route="{{route}}"
+            pattern="/dashboard/editor"
+            query-params="{{queryParams}}">
+        </app-route>
 
-      <iron-ajax
-              url=""
-              method='GET'
-              params="[[searchParam]]"
-              id='getStrategiesQuery'
-              handle-as="json"
-              on-response="onGetStrategiesResponse"
-              on-error="onGetStrategiesError"
-              headers='{{header}}'
-              debounce-duration="300"
-              loading='{{loading}}'>
-      </iron-ajax>
+        <iron-ajax
+            url=""
+            method='GET'
+            params="[[searchParam]]"
+            id='getStrategiesQuery'
+            handle-as="json"
+            on-response="onGetStrategiesResponse"
+            on-error="onGetStrategiesError"
+            headers='{{header}}'
+            debounce-duration="300"
+            loading='{{loading}}'>
+        </iron-ajax>
 
-      <iron-ajax
-              url="[[computPostDeleteStrategyUrl(deleteId)]]"
-              method='DELETE'
-              id='deleteStrategyQuery'
-              handle-as="json"
-              on-response="onDeleteStrategyResponse"
-              on-error="onDeleteStrategyError"
-              headers='{{header}}'
-              debounce-duration="300">
-      </iron-ajax>
+        <iron-ajax
+            url="[[computPostDeleteStrategyUrl(deleteId)]]"
+            method='DELETE'
+            id='deleteStrategyQuery'
+            handle-as="json"
+            on-response="onDeleteStrategyResponse"
+            on-error="onDeleteStrategyError"
+            headers='{{header}}'
+            debounce-duration="300">
+        </iron-ajax>
 
-      
-      <div class="fit"> 
         <template is='dom-if' if='[[loading]]'>
-          <aq-loading-progress loading='{{loading}}'></aq-loading-progress>
+            <aq-loading-progress loading='{{loading}}'>
+            </aq-loading-progress>
         </template>
-        
-        <paper-header-panel fixed mode="seamed">
+            
+        <aq-allpage-layout class="flex" header="All Strategies" 
+            current-path="[[currentPath]]">
 
-        <aq-editor-home-menu check-all="{{checkAll}}" 
-                active-delete="[[hasCheckedStrategies(checkedCount)]]"
-                class="paper-header">  
-        </aq-editor-home-menu>
+            <div class="header-button self-center">
+                <paper-button noink id="createButton" on-tap="createNew"><iron-icon icon="aq-icons:add"></iron-icon>Create New
+                </paper-button>
+            </div>
 
-        <!--template is='dom-if' if='{{!loading}}'-->
-            <div id='container'>
-                <div class="search-bar">
-                  <input id="searchbox" placeholder="Search your strategy" class="flex"
-                         value="{{searchText::change}}"
-                         on-keydown="checkForKeys" on-blur='blur'>
-                  <paper-button raised class="btn search-btn" on-tap="search">Search</paper-button>
+            <div class="internal-content-header">
+                <div class="layout horizontal">
+                    <div class="flex"></div>
+                     <aq-icon-expandable-search icon=0 class="self-center"></aq-icon-expandable-search>
                 </div>
 
                 <div id='ifsearch'>
@@ -256,35 +253,71 @@
                     </p>
                     <hr>
                 </div>
+            </div>
 
-                <div class="strategy-container">
-                    <template is="dom-repeat" items="{{strategies}}" id='strategyList'>
-                        <aq-editor-home-strategy-item
-                                strategy-name="[[item.name]]"
-                                num-backtest="[[item.backtests]]"
-                                strategy-desc="[[item.description]]"
-                                strategy-id="[[item._id]]"
-                                created-at="[[formatDateTime(item.createdAt)]]">
-                        </aq-editor-home-strategy-item>
+            <div class="strategy-container internal-content layout vertical">
+
+                <!--div class="layout horizontal">
+                    <template is='dom-if' if='[[searchActive]]'>  
+                        <div class="search-bar self-center">
+                            <input id="searchbox" placeholder="Search your strategy" class="flex"
+                                value="{{searchText::change}}"
+                                on-keydown="checkForKeys" on-blur='blur'>
+                            <paper-button class="btn search-btn" on-tap="search">Search</paper-button>
+                        </div>
                     </template>
-                </div>
-                <template is='dom-if' if="[[!hasStrategies(strategies, searchParam)]]">
-                    <p class="self-center"> No Strategies Yet!! <a href='/dashboard/editor?create=1'>Click Here</a></p>
+
+                    <template is='dom-if' if='[[!searchActive]]'>
+                        <div class="flex"></div>  
+                        <paper-icon-button icon="aq-icons:search" on-tap="openSearch">Search</paper-icon-button>
+                    </template>
+
+                </div-->
+
+                <!--div class="layout horizontal">
+                    <div class="flex"></div>
+                    <aq-icon-expandable-search class="self-center"></aq-icon-expandable-search>
+                </div-->
+
+                <!--div id='ifsearch'>
+                    <p class="strategy-result">Strategy results for
+                        <span class="search-string">"[[searchParam.search]]"</span>
+                    </p>
+                    <hr>
+                </div-->
+
+                
+
+                <aq-editor-home-menu check-all="{{checkAll}}" 
+                        active-delete="[[hasCheckedStrategies(checkedCount)]]">  
+                </aq-editor-home-menu>
+
+                <template is="dom-repeat" items="{{strategies}}" id='strategyList'>
+                    <aq-editor-home-strategy-item
+                            strategy-name="[[item.name]]"
+                            num-backtest="[[item.backtests]]"
+                            strategy-desc="[[item.description]]"
+                            strategy-id="[[item._id]]"
+                            created-at="[[formatDateTime(item.createdAt)]]">
+                    </aq-editor-home-strategy-item>
                 </template>
-          </div>    
-        <!--/template-->
-        </paper-header-panel>
-      </div>
 
-      <aq-delete-dialog id="dialog" heading="Delete Strategies"
-            message="Are you sure to delete {{checkedCount}} strateg[[getMessageSuffix(checkedCount)]]?"
-            cancel="Cancel"
-            accept="OK">
-      </aq-delete-dialog>  
+            </div>
 
-      <aq-editor-strategy-compare-dialog id="strategyCompareDialog"></aq-editor-strategy-compare-dialog>
+            <template is='dom-if' if="[[!hasStrategies(strategies, searchParam)]]">
+                <p class="self-center"> No Strategies Yet!! <a href='/dashboard/editor?create=1'>Click Here</a></p>
+            </template>
+          
+            <aq-delete-dialog id="dialog" heading="Delete Strategies"
+                message="Are you sure to delete {{checkedCount}} strateg[[getMessageSuffix(checkedCount)]]?"
+                cancel="Cancel"
+                accept="OK">
+            </aq-delete-dialog>  
 
-      <aq-editor-strategy-preview-dialog id="strategyPreviewDialog"></aq-editor-strategy-preview-dialog>
+            <aq-editor-strategy-compare-dialog id="strategyCompareDialog"></aq-editor-strategy-compare-dialog>
+
+            <aq-editor-strategy-preview-dialog id="strategyPreviewDialog"></aq-editor-strategy-preview-dialog>
+
     </template>
 
     <script>
@@ -344,6 +377,16 @@
                     value: false,
                 },
 
+                currentPath: {
+                    type: Array,
+                    value: ["Home", "Research", "All Strategies"],
+                },
+
+                searchActive: {
+                    type: Boolean,
+                    value: false,
+                },
+
             },
 
             listeners: {
@@ -375,6 +418,7 @@
                 if (this.create == 1) {
                     this.fire('newClicked');
                 }
+
 
             },
 
@@ -685,16 +729,28 @@
                     //this.$$('#menu-icons').style.display = 'inline';
                     this.debounce('search', this.search, 50);
                 }
+
+                this.async(function(){this.$$('#searchbox').focus();}, 50);
+                //this.$$('#searchbox').focus = false;
+                //this.searchActive = false;
             },
 
             search: function () {
                 this.searchText = this.$$('#searchbox').value;
                 this.fire('search-action', {searchtext: this.searchText});
+            },
 
+            openSearch: function() {
+                this.searchActive = true;
+                this.async(function(){this.$$('#searchbox').focus();}, 50);
             },
 
             formatDateTime: function(d) {
                 return date.formatDateTime(d);
+            },
+
+            createNew: function () {
+                this.fire('newClicked');
             },
 
         });
